Update scala打包jar.md