@@ -62,3 +62,8 @@
 ```
 mvn clean scala:compile compile package -DskipTests=true
 ```
+
+# java运行命令
+```
+java -Xms512m -Xmx512m -XX:MaxPermSize=256m -jar xxx.jar
+```
